syntax = "proto3";

option optimize_for = SPEED;
option go_package = "github.com/blink.fun/x/i18n;i18n";

message LanguageEntry {
  string path = 1;
  string language = 2;
  bool valid = 3;
  bytes payload = 20;
}

message ListLanguagesRequest {
  repeated string languages = 1;
}

message ListLanguagesResponse {
  map<string, LanguageEntry> entries = 1;
  int64 timestamp = 2;
}

// The I18N service definition.
service I18N {
  // ListLanguages
  rpc ListLanguages (ListLanguagesRequest) returns (ListLanguagesResponse);
}